force-app/main/default/objects/TaskAssignment__c/fields/DepartmentCourseGroup__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourseGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Course Group</label>
    <referenceTo>DepartmentCourseGroup__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>