force-app/main/default/objects/TaskAssignment__c/fields/DepartmentCourseGroupTask__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourseGroupTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Course Group Task</label>
    <referenceTo>DepartmentCourseGroupTask__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>