force-app/main/default/objects/TaskAssignment__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <label>Mark</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>