force-app/main/default/objects/TaskAssignment__c/fields/StudentGroup__c.field-meta.xml
<CustomField>
    <fullName>StudentGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Group</label>
    <referenceTo>StudentGroup__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>