force-app/main/default/objects/TaskAssignment__c/fields/StudentGroupMember__c.field-meta.xml
<CustomField>
    <fullName>StudentGroupMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Group Member</label>
    <referenceTo>StudentGroupMember__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>