force-app/main/default/objects/TaskAssignment__c/validationRules/VR01_Markable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Markable</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !Task__r.IsMarkable__c, Mark__c != NULL )</errorConditionFormula>
    <errorDisplayField>Mark__c</errorDisplayField>
    <errorMessage>This Task is not markable</errorMessage>
</ValidationRule>